--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,5 +26,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'HS'
 - !lcsh 'Ku Klux Klan (1915- )'
+- GITenberg
 title: The Modern Ku Klux Klan
 url: http://www.gutenberg.org/ebooks/34478
